# ifc-lite

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  ORCHESTRATION.md  README.md  RELEASE.md  mkdocs.yml  package.json  playwright.config.ts  pnpm-lock.yaml  rustc-ice-2026-06-10T23_33_27-78234.txt  tsconfig.json  turbo.json  vercel.json
.changeset/: annotation-terrain-visibility.md  assembly-tree-nesting.md  bcf-comment-entity-roundtrip.md  bcf-federation-header-files.md  bcf-marker-status-colors.md  cache-datastore-rename.md  cache-geometryclass.md  cache-v13-chunked-geometry.md  centre-parametric-profiles.md  clash-bcf-federation-header.md  clash-contact-geometry.md  clash-detection.md  clash-false-positive-fix.md  clash-review-status.md  cli-verbosity.md  clip-box.md  coderabbit-824-followups.md  cold-walls-wait.md  collab-annotations-and-geometry.md  collab-capture-doc-state.md  collab-geometry-edit-parity.md  collab-recipient-ifcx-reconstruction.md  collab-server-cors.md  collab-server-disk-blobs.md  collab-server-kick.md  collab-server-token-auth.md  content-affinity-routing.md  corner-opening-overcut.md  csg-bath-primitives-780.md  dedup-perocc-rehash.md  diagonal-opening-reveals.md  docs-link-stragglers.md  docs-refresh-readmes.md  duct-elbow-surface-curve-swept.md  embed-sdk-default-origin.md  energy-model-dfjson.md  entity-retype-reassign-class.md  evict-stale-highlight-on-move.md  exploded-mode-instanced-and-elevation.md  export-emit-deferred-property-atoms.md  (+98 more)
.depot/workflows/: desktop-compat.yml  docker.yml  docs.yml  release.yml  server-binaries.yml  test-templates.yml  test.yml
.github/workflows/: benchmark.yml  desktop-compat.yml  determinism.yml  docker.yml  docs.yml  fuzz.yml  python-wheels.yml  release.yml  sdk-canary.yml  server-binaries.yml  test-templates.yml  test.yml
api/dropbox/: _shared.ts  auth-start.ts
api/google/: _shared.ts  auth-callback.ts  token.ts
api/onedrive/: _shared.ts  disconnect.ts
apps/artifact-poc/: index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/coordly-embed/: index.html  package.json  vite.config.ts
apps/desktop/: vite.config.ts
apps/landing/: index.html  manifest.json  styles.css
apps/server/: Cargo.toml  OPERATIONS.md
apps/viewer/: AGENTS.md  CHANGELOG.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/viewer-embed/: package.json  vite.config.ts
docs/: index.md
docs/api/: python.md  rust.md  typescript.md  wasm.md
docs/architecture/: clash-detection-plan.md  coordinate-handling.md  data-flow.md  essen-multiuser-collab-plan.md  federation.md  geometry-pipeline.md  overview.md  parsing-pipeline.md  rendering-pipeline.md  wasm-wide-arithmetic.md
docs/contributing/: release.md  setup.md  testing.md
docs/design/: element-splitting.md  level-display-modes.md
docs/guide/: bcf.md  browser-requirements.md  cli.md  cloud-import.md  collab-server.md  collab-testing.md  desktop.md  drawing-2d.md  error-handling.md  exporting.md  extension-authoring.md  extensions.md  federation.md  flavors.md  geometry.md  ids.md  installation.md  mutations.md  parsing.md  performance.md  privacy.md  querying.md  quickstart.md  rendering.md  server.md  viewer-api.md
docs/research/: csg-clipping-fidelity.md  plato-single-source-codegen.md
docs/tutorials/: babylonjs-integration.md  building-viewer.md  custom-queries.md  extending-parser.md  threejs-integration.md
examples/babylonjs-viewer/: README.md  package.json
examples/collab-demo/: README.md  package.json
examples/threejs-collab/: README.md  package.json
examples/threejs-viewer/: README.md  package.json
rust/: AGENTS.md
rust/clash/: Cargo.toml
rust/core/: Cargo.toml
rust/core/fuzz/: Cargo.toml
rust/core/fuzz/corpus/parse_entity/: seed_escaped  seed_point  seed_prop  seed_wall
rust/core/fuzz/fuzz_targets/: parse_entity.rs
rust/export/: Cargo.toml
rust/ffi/: Cargo.toml
rust/ffi/src/: lib.rs  tests.rs
rust/geometry/: Cargo.toml
rust/geometry/fuzz/: Cargo.toml
rust/geometry/fuzz/corpus/kernel_subtract/: seed_degenerate_and_nan  seed_mixed_nan_inf  seed_two_triangles
rust/geometry/fuzz/corpus/triangulate_polygon/: seed_collinear  seed_infinite_9gon  seed_nan_hexagon  seed_triangle
rust/geometry/fuzz/fuzz_targets/: kernel_subtract.rs  triangulate_polygon.rs
rust/processing/: Cargo.toml
rust/python/: Cargo.toml  pyproject.toml
rust/python/src/: lib.rs
rust/wasm-bindings/: Cargo.toml
rust/wasm-bindings/src/: zero_copy.rs
rust/wasm-bindings/src/api/: clash.rs  csg_diagnostics.rs  export_data.rs  export_dfjson.rs  export_glb.rs  export_hbjson.rs  export_obj.rs  export_step.rs  gpu_meshes.rs  grid_lines.rs  mod.rs  parsing.rs  pipeline_diagnostics.rs  space_plate.rs  styling.rs  symbolic.rs
rust/wasm-bindings/src/api/gpu_meshes/: batch.rs  instancing.rs  mod.rs  prepass.rs
rust/wasm-bindings/src/api/styling/: color.rs  mod.rs  prepass.rs
scripts/: README-vercel-cost.md  api-surface.json  build-wasm.sh  check-benchmark-regression.js  check-test-wiring.mjs  fetch-prebuilt-wasm.mjs  generate-plato-clash.mjs  measure-bundle-size.sh  release-crates.mjs  run-build-wasm.mjs  space-dcel-e2e.cjs  space-diag.mjs  test-coverage.cjs  test-integration.mjs  test-wasm-contract.mjs  update-benchmark-baseline.mjs  vercel-build.sh  vercel-ignore-build.sh  vercel-install.sh
scripts/fixtures/: build-manifest.mjs  fetch-fixtures.mjs  upload-fixtures.mjs
scripts/lib/: patch-threaded-stub.mjs
scripts/perf/: README.md  flame.sh  probe.sh
server/cloud-oauth/: oauth-core.ts  oauth-handlers.ts
server/dropbox/: dropbox-handlers.ts  dropbox-oauth.ts  dropbox.ts
server/google/: google.ts
tests/: integration.test.ts  tsconfig.json
(+685 files in other folders)
