[package]
name = "ifc-lite-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MPL-2.0"
repository.workspace = true
description = "WebAssembly bindings for IFC-Lite"
keywords = ["ifc", "bim", "wasm", "webassembly", "aec"]
categories = ["wasm", "parsing"]
readme = "../../README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
debug_geometry = ["ifc-lite-geometry/debug_geometry"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
futures-util = "0.3"
# gloo-timers removed — sync processing for speed
ifc-lite-core.workspace = true
# Manifold C++ CSG kernel via the `manifold-csg-wasm-uu` feature.
# Unblocked as of `wasm-cxx-shim` v0.5.0 / `manifold-csg-sys` 3.5.100
# (May 2026); see docs/architecture/geometry-pipeline.md "WASM status".
# Build requires LLVM 18+ with libc++ headers and `wasm-ld` on PATH —
# `scripts/vercel-install.sh` provisions those on Vercel via dnf, and
# `brew install llvm lld` covers local macOS dev.
#
# Picking the feature explicitly here (rather than re-enabling the
# workspace default) keeps the opt-in contract documented at the
# wasm-bindings layer: this is the one crate that flips the kernel.
#
# NOTE: cannot use `workspace = true` here because that forces inheriting
# the workspace's `default-features = true`. Pin the path directly so we
# can pick our exact feature set from this single non-native consumer.
ifc-lite-geometry = { path = "../geometry", default-features = false, features = ["manifold-csg-wasm-uu"] }
# Canonical 2D-symbol extractor lives here; the wasm bindings just
# delegate (issue #843 follow-up — full parity, one implementation).
ifc-lite-processing = { path = "../processing" }
# Pure-geometry clash kernel (BVH broad phase + exact triangle narrow phase).
ifc-lite-clash = { path = "../clash" }
js-sys = "=0.3.83"
rayon = "1.10"
# `ifc-lite-geometry` uses rayon `par_iter` (e.g. FacetedBrep
# preprocessing). On wasm32 there is no thread pool, so it runs
# serially — but rayon-core still needs `web_spin_lock` to compile and
# behave on wasm: it replaces std::sync::Mutex in rayon's coordination
# paths with a spin-lock. Without it std::sync::Mutex blocks/zombies —
# par_iter silently runs serial. (Empirically observed: 4.2× SLOWER
# than N-worker baseline before this fix.)
rayon-core = { version = "1", features = ["web_spin_lock"] }
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
thiserror = "2.0"
wasm-bindgen = "=0.2.106"
wasm-bindgen-futures = "=0.4.56"
web-sys = { version = "=0.3.83", features = ["console", "Performance", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "=0.3.56"
